--- a/sobreNos.html
+++ b/sobreNos.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="sobreNos.css">
 </head>
 <body>
-    <h1 class="cordaycare"> SOBRE NÓS <img src="icons8-paws-64.png" alt=""></h1>
+    <br>
+    <h2>VOCÊ ENCONTRA NA</h2>
+    <h1 class="cordaycare"> PETCITY <img src="icons8-paws-64.png" alt=""></h1>
+
+    <br><br>
+
 
     <div class="fullscreen-card">
         <img src="dogPark.webp" alt="Card Image">
@@ -26,7 +31,7 @@
     <div class="custom-card2">
         <div class="card-content2">
             <h2>DOGFUN</h2>
-            <p>Nosso lago de doguinho é um cantinho especial, que garante diversão e segurança para os nossos cães se refrescarem! <br>
+            <p>Nossa piscina de doguinho é um cantinho especial, que garante diversão e segurança para os nossos cães se refrescarem! <br>
            
 <br> º Para os peludinhos que gostam de água aqui é o lugar perfeito! 
             </p>
@@ -57,6 +62,8 @@
         </div>
         <img src="dormindo.jpg" alt="Card Image">
     </div>
+
+<br>
 
     <div class="cards">
         <div class="card green">
